--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,15 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/preview_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
 
-    <View
-        android:id="@+id/shutter_animation"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0"
-        android:background="@android:color/black" />
+        <View
+            android:id="@+id/shutter_animation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0"
+            android:background="@android:color/black" />
+    </androidx.camera.view.PreviewView>
 
     <FrameLayout
         android:id="@+id/top_options"
@@ -43,6 +44,103 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/camera_mode_tab" />
+
+
+    <!--    Display Location-->
+
+
+    <LinearLayout
+        android:id="@+id/llDisplayAddress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_overlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/gps_location_display_bg"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal" >
+
+
+        <fragment
+            android:id="@+id/googleMapFragment"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+        </fragment>
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_weight="3"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvAddressTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Mumbai, Maharashtra, India"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/tvFullAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Mumbai, Maharashtra, India"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/tvLat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Lat 19.195927"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/tvLong"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Long 72.873991"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:layout_weight="1" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    tools:text="14/10/2022"/>
+
+                <DigitalClock
+                    android:id="@+id/tvTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:textColor="#ffffff"
+                    android:textSize="15sp"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/camera_mode_tab"
@@ -125,5 +223,8 @@
         app:layout_constraintStart_toEndOf="@id/shutter"
         app:layout_constraintTop_toTopOf="@id/shutter"
         tools:src="@tools:sample/backgrounds/scenic" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
